--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   </div>
 
   <footer>
-    Copyright : Helpdesk
+    Copyright : hd.vsi
   </footer>
   <script src="app.js"></script>
 </body>
