--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="bodyImage">
     <img src="image/index.png" alt="">
-    
+
   </div>
 
   </div>
@@ -111,6 +111,12 @@
           <label for="first" class="text-left">PT POS</label>
           <input type="text" class="form-control mt-2" name="PT POS" placeholder="PT POS" id="txtSaldoPTPOS" required />
         </div>
+        <!-- PT POS -->
+        <div>
+          <label for="first" class="text-left">ArtaJasa - PGN</label>
+          <input type="text" class="form-control mt-2" name="ArtaJasa" placeholder="Artajasa" id="txtArtaJasa" required />
+        </div>
+
       </div>
       <!-- FIRST SLIDE 2 -->
 
@@ -125,7 +131,7 @@
   </div>
 
   <footer>
-    Copyright : hd.vsi
+    Copyright : HD.vsi
   </footer>
   <script src="app.js"></script>
 </body>
