--- a/index.html
+++ b/index.html
@@ -111,11 +111,17 @@
           <label for="first" class="text-left">PT POS</label>
           <input type="text" class="form-control mt-2" name="PT POS" placeholder="PT POS" id="txtSaldoPTPOS" required />
         </div>
-        <!-- PT POS -->
+        <!-- ArtaJasa -->
         <div>
           <label for="first" class="text-left">ArtaJasa - PGN</label>
           <input type="text" class="form-control mt-2" name="ArtaJasa" placeholder="Artajasa" id="txtArtaJasa" required />
         </div>
+<!-- Arindo - PDAM -->
+<div>
+  <label for="first" class="text-left">Arindo - PDAM</label>
+  <input type="text" class="form-control mt-2" name="txtarindo" placeholder="Arindo" id="txtarindo" required />
+</div>
+        
 
       </div>
       <!-- FIRST SLIDE 2 -->
