--- a/index.html
+++ b/index.html
@@ -114,15 +114,14 @@
         <!-- ArtaJasa -->
         <div>
           <label for="first" class="text-left">ArtaJasa - PGN</label>
-          <input type="text" class="form-control mt-2" name="ArtaJasa" placeholder="Artajasa" id="txtArtaJasa" required />
+          <input type="text" class="form-control mt-2" name="ArtaJasa" placeholder="Artajasa" id="txtArtaJasa"
+            required />
         </div>
-<!-- Arindo - PDAM -->
-<div>
-  <label for="first" class="text-left">Arindo - PDAM</label>
-  <input type="text" class="form-control mt-2" name="txtarindo" placeholder="Arindo" id="txtarindo" required />
-</div>
-        
-
+        <!-- Arindo - PDAM -->
+        <div>
+          <label for="first" class="text-left">Arindo - PDAM</label>
+          <input type="text" class="form-control mt-2" name="Arindo" placeholder="Arindo" id="txtArindo" required />
+        </div>
       </div>
       <!-- FIRST SLIDE 2 -->
 
