--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p class="title">Voucher</p>
         <!-- IRS -->
         <div>
-          <label for="first" class="text-left">IRS</label>
+          <label for="first" class="text-left">IRS - Vhancell</label>
           <input type="text" class="form-control mt-2" name="IRS" placeholder="IRS" id="txtSaldoIrs" required />
         </div>
         <!--  Pulsa-114 -->
@@ -78,7 +78,7 @@
         </div>
         <!-- DJI - FIF -->
         <div>
-          <label for="first" class="text-left">Dji - FIF</label>
+          <label for="first" class="text-left">DJI - FIF</label>
           <input type="text" class="form-control mt-2" name="DJI - FIF" placeholder="DJI - FIF" id="txtSaldoDJI"
             required />
         </div>
