--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
           <label for="first" class="text-left">E-Money</label>
           <input type="text" class="form-control mt-2" name="E-Money" placeholder="E-Money" id="txtSaldoEM" required />
         </div>
+        <!-- DANA -->
+        <div>
+          <label for="first" class="text-left">Dana</label>
+          <input type="text" class="form-control mt-2" name="Dana" placeholder="Dana" id="txtSaldoDn" required />
+        </div>
       </div>
 
       <!-- FIRST SLIDE 2 -->
@@ -122,6 +127,7 @@
           <label for="first" class="text-left">Arindo - PDAM</label>
           <input type="text" class="form-control mt-2" name="Arindo" placeholder="Arindo" id="txtArindo" required />
         </div>
+        
       </div>
       <!-- FIRST SLIDE 2 -->
 
