--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- DANA -->
         <div>
           <label for="first" class="text-left">Dana</label>
-          <input type="text" class="form-control mt-2" name="Dana" placeholder="Dana" id="txtSaldoDn" required />
+          <input type="text" class="form-control mt-2" name="Dana" placeholder="Dana" id="txtSaldoDns" required />
         </div>
       </div>
 
