--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
           <label for="first" class="text-left">Dana</label>
           <input type="text" class="form-control mt-2" name="Dana" placeholder="Dana" id="txtSaldoDn" required />
         </div>
+        <!-- EAZYLOAD -->
+        <div>
+          <label for="first" class="text-left">EAZYLOAD - Voucher</label>
+          <input type="text" class="form-control mt-2" name="Eazy" placeholder="Eazyload" id="txtEazy" required />
+        </div>
       </div>
 
       <!-- FIRST SLIDE 2 -->
