--- a/index.html
+++ b/index.html
@@ -132,6 +132,11 @@
           <label for="first" class="text-left">Arindo - PDAM</label>
           <input type="text" class="form-control mt-2" name="Arindo" placeholder="Arindo" id="txtArindo" required />
         </div>
+
+        <div>
+          <label for="first" class="text-left">LinkQU - Transfer Uang</label>
+          <input type="text" class="form-control mt-2" name="LinkQU" placeholder="LinkQU" id="txtLinkQU" required />
+        </div>
         
       </div>
       <!-- FIRST SLIDE 2 -->
