--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
       <div class="col-4" id="voucher">
         <p class="title">Voucher</p>
         <!-- IRS -->
-        <div>
+        <div class="voucher">
           <label for="first" class="text-left">IRS - Vhancell</label>
           <input type="text" class="form-control mt-2" name="IRS" placeholder="IRS" id="txtSaldoIrs" required />
         </div>
         <!--  Pulsa-114 -->
-        <div>
+        <div class="voucher">
           <label for="first" class="text-left">Pulsa-114</label>
           <input type="text" class="form-control mt-2" name="Pulsa-114" placeholder="Pulsa-114" id="txtSaldoP114"
             required />
         </div>
         <!-- Plus Link -->
-        <div>
+        <div class="voucher">
           <label for="first" class="text-left">Plus Link</label>
           <input type="text" class="form-control mt-2" name="Plus Link" placeholder="Plus Link" id="txtSaldoPL"
             required />
         </div>
         <!-- E-Money -->
-        <div>
+        <div class="voucher">
           <label for="first" class="text-left">E-Money</label>
           <input type="text" class="form-control mt-2" name="E-Money" placeholder="E-Money" id="txtSaldoEM" required />
         </div>
@@ -59,7 +59,7 @@
           <input type="text" class="form-control mt-2" name="Dana" placeholder="Dana" id="txtSaldoDn" required />
         </div>
         <!-- EAZYLOAD -->
-        <div>
+        <div class="voucher">
           <label for="first" class="text-left">EAZYLOAD - Voucher</label>
           <input type="text" class="form-control mt-2" name="Eazy" placeholder="Eazyload" id="txtEazy" required />
         </div>
