Update 3 Juni Full Data
Pembaharuan tambah Dana di Siang hari

--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
         <p class="title">Voucher</p>
         <!-- IRS -->
         <div>
-          <label for="first" class="text-left">IRS - Vhancell</label>
-          <input type="text" class="form-control mt-2" name="IRS" placeholder="IRS" id="txtSaldoIrs" required />
+          <label for="first" class="text-left voucher">IRS - Vhancell</label>
+          <input type="text" class="form-control mt-2 voucher" name="IRS" placeholder="IRS" id="txtSaldoIrs" required />
         </div>
         <!--  Pulsa-114 -->
         <div>
-          <label for="first" class="text-left">Pulsa-114</label>
-          <input type="text" class="form-control mt-2" name="Pulsa-114" placeholder="Pulsa-114" id="txtSaldoP114"
+          <label for="first" class="text-left voucher">Pulsa-114</label>
+          <input type="text" class="form-control mt-2 voucher" name="Pulsa-114" placeholder="Pulsa-114" id="txtSaldoP114"
             required />
         </div>
         <!-- Plus Link -->
         <div>
-          <label for="first" class="text-left">Plus Link</label>
-          <input type="text" class="form-control mt-2" name="Plus Link" placeholder="Plus Link" id="txtSaldoPL"
+          <label for="first" class="text-left voucher">Plus Link</label>
+          <input type="text" class="form-control mt-2 voucher" name="Plus Link" placeholder="Plus Link" id="txtSaldoPL"
             required />
         </div>
         <!-- E-Money -->
         <div>
-          <label for="first" class="text-left">E-Money</label>
-          <input type="text" class="form-control mt-2" name="E-Money" placeholder="E-Money" id="txtSaldoEM" required />
+          <label for="first" class="text-left voucher">E-Money</label>
+          <input type="text" class="form-control mt-2 voucher" name="E-Money" placeholder="E-Money" id="txtSaldoEM" required />
         </div>
         <!-- DANA -->
         <div>
@@ -60,8 +60,8 @@
         </div>
         <!-- EAZYLOAD -->
         <div>
-          <label for="first" class="text-left">EAZYLOAD - Voucher</label>
-          <input type="text" class="form-control mt-2" name="Eazy" placeholder="Eazyload" id="txtEazy" required />
+          <label for="first" class="text-left voucher">EAZYLOAD - Voucher</label>
+          <input type="text" class="form-control mt-2 voucher" name="Eazy" placeholder="Eazyload" id="txtEazy" required />
         </div>
       </div>
 
