--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
               <label for="first" class="text-left">LinkQU - Transfer Uang</label>
               <input type="text" class="form-control mt-2" name="LinkQU" placeholder="LinkQU" id="txtLinkQU" required />
             </div>
+
+            <div>
+              <label for="first" class="text-left">OVO</label>
+              <input type="text" class="form-control mt-2" name="Ovo" placeholder="Ovo" id="txtOvo" required />
+            </div>
+
           </div>
         </div>
       </div>
