--- a/BIN/backindexcopy.html
+++ b/BIN/backindexcopy.html
@@ -180,7 +180,43 @@
     </div>
     <!-- END  row-->
 
-   
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <!-- <h5 class="modal-title" id="exampleModalLabel">Jastel</h5> -->
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+
+          <div class="modal-body">
+            <div class="col-sm">
+              <div class="row">
+                <div class="col-12 bodySpan">
+                  <label>Nomor : <label>
+                      <span>
+                        <input type="text" id='nomor' onblur="this.value=removeSpaces(this.value);" value="">
+                      </span>
+                      <button id="EksekusiInput" class="btn-secondary">
+                        <i class="fa fa-plus"></i> Row </button>
+                </div>
+                <div>
+                  <span id="CopasDatap"></span>
+                </div>
+              </div>
+
+            </div>
+          </div> <!-- End modal -->
+
+          <!-- Modal footer -->
+          <div class="modal-footer fw-bolder">
+            <div>Hilangkan Angka 0 di depan
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
   </div>
 
   <footer>
