--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     </label>
     <ul>
       <li><a class="active" href="#">Saldo</a></li>
-      <li><a type="button" data-bs-toggle="modal" data-bs-target="#myModal">Jastel</a></li>
-
+      <!-- <li><a type="button" data-bs-toggle="modal" data-bs-target="#myModal">Jastel</a></li> -->
     </ul>
   </nav>
 
