--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </div>
             <!-- DANA -->
             <div>
-              <label for="first" class="text-left">Dana</label>
-              <input type="text" class="form-control mt-2" name="Dana" placeholder="Dana" id="txtSaldoDn" required />
+              <label for="first" class="text-left">E-Wallet Dana</label>
+              <input type="text" class="form-control mt-2" name="Dana" placeholder="E-Wallet Dana" id="txtSaldoDn" required />
             </div> 
           </div>
         </div>
@@ -161,8 +161,8 @@
             </div>
 
             <div>
-              <label for="first" class="text-left">OVO</label>
-              <input type="text" class="form-control mt-2" name="Ovo" placeholder="Ovo" id="txtOvo" required />
+              <label for="first" class="text-left">E-Wallet Ovo</label>
+              <input type="text" class="form-control mt-2" name="Ovo" placeholder="E-Wallet Ovo" id="txtOvo" required />
             </div>
 
           </div>
