--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
   <link href="design/style.css" rel="stylesheet" />
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -38,39 +39,43 @@
     </div>
 
     <div class="row justify-content-center mt-4">
-       <!-- FIRST SLIDE 1 -->
+      <!-- FIRST SLIDE 1 -->
       <div class="col-md col-sm" id="voucher">
         <div class="row justify-content-evenly">
           <p class="col-12 title" id="JudulExVoucher">Voucher</p>
           <div class="col-6">
-            <div>
-              <label for="first" class="text-left voucher">IRS - Vhancell</label>
-              <input type="text" class="form-control mt-2 voucher" name="IRS" placeholder="IRS" id="txtSaldoIrs"
-                required />
+            
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2 voucher" name="IRS" id="txtSaldoIrs" required />
+               <label for="first" class="text-left voucher">IRS - Vhancell</label>
             </div>
             <!--  Pulsa-114 -->
-            <div>
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2 voucher" name="Pulsa-114"  id="txtSaldoP114" required />
               <label for="first" class="text-left voucher">Pulsa-114</label>
-              <input type="text" class="form-control mt-2 voucher" name="Pulsa-114" placeholder="Pulsa-114"
-                id="txtSaldoP114" required />
             </div>
             <!-- Plus Link -->
-            <div>
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2 voucher" name="Plus Link" id="txtSaldoPL" required />
               <label for="first" class="text-left voucher">Plus Link</label>
-              <input type="text" class="form-control mt-2 voucher" name="Plus Link" placeholder="Plus Link"
-                id="txtSaldoPL" required />
             </div>
+            <!-- Plus Link -->
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2 voucher" name="KUWAIS" id="txtSaldoKws" required />
+              <label for="first" class="text-left voucher">Kuwais</label>
+            </div>
+
+
             <!-- E-Money -->
-            <div>
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2 voucher" name="E-Money"  id="txtSaldoEM" required />
               <label for="first" class="text-left voucher">E-Money</label>
-              <input type="text" class="form-control mt-2 voucher" name="E-Money" placeholder="E-Money" id="txtSaldoEM"
-                required />
             </div>
             <!-- DANA -->
-            <div>
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="Dana" id="txtSaldoDn" required />
               <label for="first" class="text-left">E-Wallet Dana</label>
-              <input type="text" class="form-control mt-2" name="Dana" placeholder="E-Wallet Dana" id="txtSaldoDn" required />
-            </div> 
+            </div>
           </div>
         </div>
       </div>
@@ -82,87 +87,77 @@
           <p class="col-12 title" id="JudulExVoucher">Ex Voucher</p>
 
           <div class="col-6">
-            <div>
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="Bimasakti"  id="txtSaldoBima" required />
               <label for="first" class="text-left">Bimasakti</label>
-              <input type="text" class="form-control mt-2" name="Bimasakti" placeholder="Bimasakti" id="txtSaldoBima"
-                required />
             </div>
             <!-- Teleanjar -->
-            <div>
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="Teleanjar"  id="txtSaldoTeleanjar" required />
               <label for="first" class="text-left">Teleanjar</label>
-              <input type="text" class="form-control mt-2" name="Teleanjar" placeholder="Teleanjar"
-                id="txtSaldoTeleanjar" required />
             </div>
             <!-- DELIMA -->
-            <div>
-              <label for="first" class="text-left">Delima - Finnet</label>
-              <input type="text" class="form-control mt-2" name="Delima" placeholder="Delima" id="txtSaldoDelima"
-                required />
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="Delima"  id="txtSaldoDelima" required />
+               <label for="first" class="text-left">Delima - Finnet</label>
             </div>
             <!-- DJI - FIF -->
-            <div>
-              <label for="first" class="text-left">DJI - FIF</label>
-              <input type="text" class="form-control mt-2" name="DJI - FIF" placeholder="DJI - FIF" id="txtSaldoDJI"
-                required />
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="DJI - FIF" id="txtSaldoDJI" required />
+               <label for="first" class="text-left">DJI - FIF</label>
             </div>
             <!-- Big Flip - Transfer Uang -->
-            <div>
-              <label for="first" class="text-left">Big Flip - Transfer Uang</label>
-              <input type="text" class="form-control mt-2" name="Big Flip - Transfer Uang"
-                placeholder="Big Flip - Transfer Uang" id="txtSaldoBigFlip" required />
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="Big Flip - Transfer Uang" id="txtSaldoBigFlip" required />
+               <label for="first" class="text-left">Big Flip - Transfer Uang</label>
             </div>
             <!--  Pluslink - MF -->
-            <div>
-              <label for="first" class="text-left">Pluslink - MF</label>
-              <input type="text" class="form-control mt-2" name="Pluslink - MF" placeholder="Pluslink - MF"
-                id="txtSaldoPluslinkMF" required />
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="Pluslink - MF"  id="txtSaldoPluslinkMF" required />
+               <label for="first" class="text-left">Pluslink - MF</label>
             </div>
             <!--Mitracom -->
-            <div>
-              <label for="first" class="text-left">Mitracom</label>
-              <input type="text" class="form-control mt-2" name="Mitracom" placeholder="Mitracom" id="txtSaldoMitracom"
-                required />
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="Mitracom"  id="txtSaldoMitracom" required />
+               <label for="first" class="text-left">Mitracom</label>
             </div>
           </div>
 
           <div class="col-6">
             <!-- GSP -->
-            <div>
-              <label for="first" class="text-left">GSP</label>
-              <input type="text" class="form-control mt-2" name="GSP" placeholder="GSP" id="txtSaldoGSP" required />
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="GSP"  id="txtSaldoGSP" required />
+               <label for="first" class="text-left">GSP</label>
             </div>
             <!-- PT POS -->
-            <div>
-              <label for="first" class="text-left">PT POS</label>
-              <input type="text" class="form-control mt-2" name="PT POS" placeholder="PT POS" id="txtSaldoPTPOS"
-                required />
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="PT POS" id="txtSaldoPTPOS" required />
+               <label for="first" class="text-left">PT POS</label>
             </div>
             <!-- ArtaJasa - MBA -->
-            <div>
-              <label for="first" class="text-left">ArtaJasa - MBA</label>
-              <input type="text" class="form-control mt-2" name="ArtaJasa-MBA" placeholder="AJ - MBA" id="txtArtaJasaMBA"
-                required />
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="ArtaJasa-MBA"  id="txtArtaJasaMBA" required />
+               <label for="first" class="text-left">ArtaJasa - MBA</label>
             </div>
             <!-- ArtaJasa - VSI -->
-            <div>
-              <label for="first" class="text-left">ArtaJasa - VSI</label>
-              <input type="text" class="form-control mt-2" name="ArtaJasa-VSI" placeholder="AJ - VSI" id="txtArtaJasaVSI"
-                required />
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="ArtaJasa-VSI"  id="txtArtaJasaVSI" required />
+               <label for="first" class="text-left">ArtaJasa - VSI</label>
             </div>
             <!-- Arindo - PDAM -->
-            <div>
-              <label for="first" class="text-left">Arindo - PDAM</label>
-              <input type="text" class="form-control mt-2" name="Arindo" placeholder="Arindo" id="txtArindo" required />
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="Arindo"   id="txtArindo" required />
+               <label for="first" class="text-left">Arindo - PDAM</label>
             </div>
             <!-- LinkQU -->
-            <div>
-              <label for="first" class="text-left">LinkQU - Transfer Uang</label>
-              <input type="text" class="form-control mt-2" name="LinkQU" placeholder="LinkQU" id="txtLinkQU" required />
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="LinkQU"  id="txtLinkQU" required />
+               <label for="first" class="text-left">LinkQU - Transfer Uang</label>
             </div>
 
-            <div>
-              <label for="first" class="text-left">E-Wallet Ovo</label>
-              <input type="text" class="form-control mt-2" name="Ovo" placeholder="E-Wallet Ovo" id="txtOvo" required />
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="Ovo"  id="txtOvo" required />
+               <label for="first" class="text-left">E-Wallet Ovo</label>
             </div>
 
           </div>
@@ -179,7 +174,7 @@
     </div>
     <!-- END  row-->
 
-   
+
   </div>
 
   <footer>
