Add MMI Voucher
Penambahan saldo MMI Voucher
tanggal 14 Juni 2024.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             
              <div class="input-SBiller">
                <input type="text" class="form-control mt-2 voucher" name="IRS" id="txtSaldoIrs" required />
-               <label for="first" class="text-left voucher">IRS - Vhancell</label>
+               <label for="first" class="text-left voucher">IRS-Vhancell</label>
             </div>
             <!--  Pulsa-114 -->
              <div class="input-SBiller">
@@ -59,13 +59,16 @@
                <input type="text" class="form-control mt-2 voucher" name="Plus Link" id="txtSaldoPL" required />
               <label for="first" class="text-left voucher">Plus Link</label>
             </div>
-            <!-- Plus Link -->
+            <!-- Kuwais-->
              <div class="input-SBiller">
                <input type="text" class="form-control mt-2 voucher" name="KUWAIS" id="txtSaldoKws" required />
               <label for="first" class="text-left voucher">Kuwais</label>
             </div>
-
-
+             <!-- MMI-->
+             <div class="input-SBiller">
+              <input type="text" class="form-control mt-2 voucher" name="MMI" id="txtSaldoMMI" required />
+             <label for="first" class="text-left voucher">MMI</label>
+           </div>
             <!-- E-Money -->
              <div class="input-SBiller">
                <input type="text" class="form-control mt-2 voucher" name="E-Money"  id="txtSaldoEM" required />
