--- a/index.html
+++ b/index.html
@@ -43,29 +43,25 @@
       <div class="col-md col-sm" id="voucher">
         <div class="row justify-content-evenly">
           <p class="col-12 title" id="JudulExVoucher">Voucher</p>
-          <div class="col-6">
-            
+          <div class="col-6">            
              <div class="input-SBiller">
                <input type="text" class="form-control mt-2 voucher" name="IRS" id="txtSaldoIrs" required />
-               <label for="first" class="text-left voucher">IRS - Vhancell</label>
+               <label for="first" class="text-left voucher">IRS-Vhancell</label>
             </div>
             <!--  Pulsa-114 -->
              <div class="input-SBiller">
                <input type="text" class="form-control mt-2 voucher" name="Pulsa-114"  id="txtSaldoP114" required />
               <label for="first" class="text-left voucher">Pulsa-114</label>
-            </div>
-            <!-- Plus Link -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2 voucher" name="Plus Link" id="txtSaldoPL" required />
-              <label for="first" class="text-left voucher">Plus Link</label>
-            </div>
-            <!-- Plus Link -->
+            </div>            
              <div class="input-SBiller">
                <input type="text" class="form-control mt-2 voucher" name="KUWAIS" id="txtSaldoKws" required />
               <label for="first" class="text-left voucher">Kuwais</label>
             </div>
-
-
+             <!-- MMI-->
+             <div class="input-SBiller">
+              <input type="text" class="form-control mt-2 voucher" name="MMI" id="txtSaldoMMI" required />
+             <label for="first" class="text-left voucher">MMI</label>
+           </div>
             <!-- E-Money -->
              <div class="input-SBiller">
                <input type="text" class="form-control mt-2 voucher" name="E-Money"  id="txtSaldoEM" required />
