--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             
              <div class="input-SBiller">
                <input type="text" class="form-control mt-2 voucher" name="IRS" id="txtSaldoIrs" required disabled />
-               <label for="first" class="text-left voucher">Irs-Vhancell</label>
+               <label for="first" class="text-left voucher">IRS-Vhancell</label>
             </div>
             <!--  Pulsa-114 -->
              <div class="input-SBiller">
