--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <!--  Pulsa-114 -->
              <div class="input-SBiller">
-               <input type="text" class="form-control mt-2 voucher" name="Pulsa-114"  id="txtSaldoP114" required />
+               <input type="text" class="form-control mt-2 voucher" name="Pulsa-114"  id="txtSaldoP114" required disabled/>
               <label for="first" class="text-left voucher">Pulsa-114</label>
             </div> 
             <!-- Kuwais-->
