--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="col-6">
             
              <div class="input-SBiller">
-               <input type="text" class="form-control mt-2 voucher" name="IRS" id="txtSaldoIrs" required disabled />
+               <input type="text" class="form-control mt-2 voucher" name="IRS" id="txtSaldoIrs" required />
                <label for="first" class="text-left voucher">IRS-Vhancell</label>
             </div>
             <!--  Pulsa-114 -->
