--- a/index.html
+++ b/index.html
@@ -44,36 +44,43 @@
         <div class="row justify-content-evenly">
           <p class="col-12 title" id="JudulExVoucher">Voucher</p>
           <div class="col-6">
-            
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2 voucher" name="IRS" id="txtSaldoIrs" required />
+
+            <!--  Pulsa-VHANCELL -->
+             <div class="input-SBiller d-none">
+               <input type="text" class="form-control mt-2 voucher" name="IRS" id="txtSaldoIrs" required  />
                <label for="first" class="text-left voucher">IRS-Vhancell</label>
             </div>
+
             <!--  Pulsa-114 -->
              <div class="input-SBiller">
                <input type="text" class="form-control mt-2 voucher" name="Pulsa-114"  id="txtSaldoP114" required disabled/>
               <label for="first" class="text-left voucher">Pulsa-114</label>
             </div> 
+
             <!-- Kuwais-->
              <div class="input-SBiller">
                <input type="text" class="form-control mt-2 voucher" name="KUWAIS" id="txtSaldoKws" required />
               <label for="first" class="text-left voucher">Kuwais</label>
             </div>
+
              <!-- MMI-->
              <div class="input-SBiller">
               <input type="text" class="form-control mt-2 voucher" name="MMI" id="txtSaldoMMI" required />
              <label for="first" class="text-left voucher">MMI</label>
            </div>
+
              <!-- PPM -->
              <div class="input-SBiller">
               <input type="text" class="form-control mt-2 voucher" name="PPM" id="txtSaldoPPM" required />
              <label for="first" class="text-left voucher">PPM</label>
            </div>
+
             <!-- E-Money -->
              <div class="input-SBiller">
                <input type="text" class="form-control mt-2 voucher" name="E-Money"  id="txtSaldoEM" required />
               <label for="first" class="text-left voucher">E-Money</label>
             </div>
+
             <!-- DANA -->
              <div class="input-SBiller">
                <input type="text" class="form-control mt-2" name="Dana" id="txtSaldoDn" required />
