--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
           <div class="col-6">
 
             <!--  Pulsa-VHANCELL -->
-             <div class="input-SBiller d-none">
+             <!-- <div class="input-SBiller d-none">
                <input type="text" class="form-control mt-2 voucher" name="IRS" id="txtSaldoIrs" required  />
                <label for="first" class="text-left voucher">IRS-Vhancell</label>
-            </div>
+            </div> -->
 
             <!--  Pulsa-114 -->
              <div class="input-SBiller">
