--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <nav>
     <label class="logo">
-      <img src="image/index.png" alt="">
+      <!-- <img src="image/index.png" alt=""> -->
     </label>
     <ul>
       <li><a class="active" href="#">Saldo</a></li>
@@ -169,6 +169,12 @@
                <input type="text" class="form-control mt-2" name="Ovo"  id="txtOvo" required />
                <label for="first" class="text-left">E-Wallet Ovo</label>
             </div>
+
+
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="Gopay"  id="txtTokpedGopay" required />
+              <label for="first" class="text-left">Tokopedia - Gopay</label>
+           </div>
 
           </div>
         </div>
