22Mei 2025 Tambahan Biller
Penambahan biller pdam indramayu
tgl 22Mei 2025

--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
                <input type="text" class="form-control mt-2" name="Mitracom"  id="txtSaldoMitracom" required />
                <label for="first" class="text-left">Mitracom</label>
             </div>
+
+             <!--Mitracom -->
+             <div class="input-SBiller">
+               <input type="text" class="form-control mt-2" name="PDAM Indramayu"  id="txtSaldoPamIndramayu" required />
+               <label for="first" class="text-left">PDAM Indramayu</label>
+            </div>
+
           </div>
 
           <div class="col-6">
