Update Hide Biller
Tanggal 13 Juni 2025, hide biller FLIP.

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
                <label for="first" class="text-left">DJI - FIF</label>
             </div>
             <!-- Big Flip - Transfer Uang -->
-             <div class="input-SBiller">
+             <!-- <div class="input-SBiller">
                <input type="text" class="form-control mt-2" name="Big Flip - Transfer Uang" id="txtSaldoBigFlip" required />
                <label for="first" class="text-left">Big Flip - Transfer Uang</label>
-            </div>
+            </div> -->
             <!--  Pluslink - MF -->
              <div class="input-SBiller">
                <input type="text" class="form-control mt-2" name="Pluslink - MF"  id="txtSaldoPluslinkMF" required />
