Add Biller Midtrans
20 Juni 2025 Menambahkan biller midtrans

--- a/index.html
+++ b/index.html
@@ -46,44 +46,45 @@
           <div class="col-6">
 
             <!--  Pulsa-VHANCELL -->
-             <!-- <div class="input-SBiller d-none">
+            <!-- <div class="input-SBiller d-none">
                <input type="text" class="form-control mt-2 voucher" name="IRS" id="txtSaldoIrs" required  />
                <label for="first" class="text-left voucher">IRS-Vhancell</label>
             </div> -->
 
             <!--  Pulsa-114 -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2 voucher" name="Pulsa-114"  id="txtSaldoP114" required disabled/>
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2 voucher" name="Pulsa-114" id="txtSaldoP114" required
+                disabled />
               <label for="first" class="text-left voucher">Pulsa-114</label>
-            </div> 
+            </div>
 
             <!-- Kuwais-->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2 voucher" name="KUWAIS" id="txtSaldoKws" required />
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2 voucher" name="KUWAIS" id="txtSaldoKws" required />
               <label for="first" class="text-left voucher">Kuwais</label>
             </div>
 
-             <!-- MMI-->
-             <div class="input-SBiller">
+            <!-- MMI-->
+            <div class="input-SBiller">
               <input type="text" class="form-control mt-2 voucher" name="MMI" id="txtSaldoMMI" required />
-             <label for="first" class="text-left voucher">MMI</label>
-           </div>
+              <label for="first" class="text-left voucher">MMI</label>
+            </div>
 
-             <!-- PPM -->
-             <div class="input-SBiller">
+            <!-- PPM -->
+            <div class="input-SBiller">
               <input type="text" class="form-control mt-2 voucher" name="PPM" id="txtSaldoPPM" required />
-             <label for="first" class="text-left voucher">PPM</label>
-           </div>
+              <label for="first" class="text-left voucher">PPM</label>
+            </div>
 
             <!-- E-Money -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2 voucher" name="E-Money"  id="txtSaldoEM" required />
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2 voucher" name="E-Money" id="txtSaldoEM" required />
               <label for="first" class="text-left voucher">E-Money</label>
             </div>
 
             <!-- DANA -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="Dana" id="txtSaldoDn" required />
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="Dana" id="txtSaldoDn" required />
               <label for="first" class="text-left">E-Wallet Dana</label>
             </div>
           </div>
@@ -97,88 +98,95 @@
           <p class="col-12 title" id="JudulExVoucher">Ex Voucher</p>
 
           <div class="col-6">
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="Bimasakti"  id="txtSaldoBima" required />
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="Bimasakti" id="txtSaldoBima" required />
               <label for="first" class="text-left">Bimasakti</label>
             </div>
             <!-- Teleanjar -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="Teleanjar"  id="txtSaldoTeleanjar" required />
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="Teleanjar" id="txtSaldoTeleanjar" required />
               <label for="first" class="text-left">Teleanjar</label>
             </div>
             <!-- DELIMA -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="Delima"  id="txtSaldoDelima" required />
-               <label for="first" class="text-left">Delima - Finnet</label>
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="Delima" id="txtSaldoDelima" required />
+              <label for="first" class="text-left">Delima - Finnet</label>
             </div>
             <!-- DJI - FIF -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="DJI - FIF" id="txtSaldoDJI" required />
-               <label for="first" class="text-left">DJI - FIF</label>
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="DJI - FIF" id="txtSaldoDJI" required />
+              <label for="first" class="text-left">DJI - FIF</label>
             </div>
             <!-- Big Flip - Transfer Uang -->
-            
+
             <!--  Pluslink - MF -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="Pluslink - MF"  id="txtSaldoPluslinkMF" required />
-               <label for="first" class="text-left">Pluslink - MF</label>
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="Pluslink - MF" id="txtSaldoPluslinkMF" required />
+              <label for="first" class="text-left">Pluslink - MF</label>
             </div>
             <!--Mitracom -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="Mitracom"  id="txtSaldoMitracom" required />
-               <label for="first" class="text-left">Mitracom</label>
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="Mitracom" id="txtSaldoMitracom" required />
+              <label for="first" class="text-left">Mitracom</label>
             </div>
 
+            <!--Mitracom -->
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="PDAM Indramayu" id="txtSaldoPamIndramayu" required />
+              <label for="first" class="text-left">PDAM Indramayu</label>
+            </div>
+
+
              <!--Mitracom -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="PDAM Indramayu"  id="txtSaldoPamIndramayu" required />
-               <label for="first" class="text-left">PDAM Indramayu</label>
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="Midtrans" id="txtSaldoMidtrans" required />
+              <label for="first" class="text-left">Midtrans</label>
             </div>
 
           </div>
 
           <div class="col-6">
             <!-- GSP -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="GSP"  id="txtSaldoGSP" required />
-               <label for="first" class="text-left">GSP</label>
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="GSP" id="txtSaldoGSP" required />
+              <label for="first" class="text-left">GSP</label>
             </div>
             <!-- PT POS -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="PT POS" id="txtSaldoPTPOS" required />
-               <label for="first" class="text-left">PT POS</label>
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="PT POS" id="txtSaldoPTPOS" required />
+              <label for="first" class="text-left">PT POS</label>
             </div>
             <!-- ArtaJasa - MBA -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="ArtaJasa-MBA"  id="txtArtaJasaMBA" required />
-               <label for="first" class="text-left">ArtaJasa - MBA</label>
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="ArtaJasa-MBA" id="txtArtaJasaMBA" required />
+              <label for="first" class="text-left">ArtaJasa - MBA</label>
             </div>
             <!-- ArtaJasa - VSI -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="ArtaJasa-VSI"  id="txtArtaJasaVSI" required />
-               <label for="first" class="text-left">ArtaJasa - VSI</label>
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="ArtaJasa-VSI" id="txtArtaJasaVSI" required />
+              <label for="first" class="text-left">ArtaJasa - VSI</label>
             </div>
             <!-- Arindo - PDAM -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="Arindo"   id="txtArindo" required />
-               <label for="first" class="text-left">Arindo - PDAM</label>
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="Arindo" id="txtArindo" required />
+              <label for="first" class="text-left">Arindo - PDAM</label>
             </div>
             <!-- LinkQU -->
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="LinkQU"  id="txtLinkQU" required />
-               <label for="first" class="text-left">LinkQU - Transfer Uang</label>
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="LinkQU" id="txtLinkQU" required />
+              <label for="first" class="text-left">LinkQU - Transfer Uang</label>
             </div>
 
-             <div class="input-SBiller">
-               <input type="text" class="form-control mt-2" name="Ovo"  id="txtOvo" required />
-               <label for="first" class="text-left">E-Wallet Ovo</label>
+            <div class="input-SBiller">
+              <input type="text" class="form-control mt-2" name="Ovo" id="txtOvo" required />
+              <label for="first" class="text-left">E-Wallet Ovo</label>
             </div>
 
 
             <div class="input-SBiller">
-              <input type="text" class="form-control mt-2" name="Gopay"  id="txtTokpedGopay" required />
+              <input type="text" class="form-control mt-2" name="Gopay" id="txtTokpedGopay" required />
               <label for="first" class="text-left">Tokopedia - Gopay</label>
-           </div>
+            </div>
 
           </div>
         </div>
