--- a/index.html
+++ b/index.html
@@ -130,17 +130,12 @@
               <label for="first" class="text-left">Mitracom</label>
             </div>
 
-            <!--Mitracom -->
+            <!--PDAM Indramayu -->
             <div class="input-SBiller">
               <input type="text" class="form-control mt-2" name="PDAM Indramayu" id="txtSaldoPamIndramayu" required />
               <label for="first" class="text-left">PDAM Indramayu</label>
             </div>
 
-             <!--Mitracom -->
-            <div class="input-SBiller">
-              <input type="text" class="form-control mt-2" name="Midtrans" id="txtSaldoMidtrans" required />
-              <label for="first" class="text-left">Midtrans</label>
-            </div>
 
           </div>
 
