--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
                 <label>Mitracom</label>
                 <input type="text" class="form-control" id="txtSaldoMitracom" required />
               </div>
+ 
+              <div class="input-SBiller">
+                <label>PDAM Indramayu</label>
+                <input type="text" class="form-control" id="txtSaldoPamIndramayu" required />
+              </div>
 
               <div class="input-SBiller">
                 <label>AJN</label>
