--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </div>
 
               <div class="input-SBiller">
-                <label>AJN</label>
+                <label>PDAM AJN</label>
                 <input type="text" class="form-control" id="txtSaldoAJN" required />
               </div>
 
