--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <p class="title">Voucher</p>
 
           <div class="input-SBiller">
-            <label>Pulsa-114</label>
+            <label>114</label>
             <input type="text" class="form-control" id="txtSaldoP114" disabled />
           </div>
 
