--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="row justify-content-center">
 
       <!-- PANEL 1 -->
-      <div class="col-md-5 col-sm-12">
+      <div class="col-md-5 col-sm-12" id="VoucherHide">
         <div class="card-panel">
           <p class="title">Voucher</p>
 
